--- a/index.html
+++ b/index.html
@@ -17,22 +17,27 @@
 
   </head>
   <body>
-    <section class="card">
-      <div class="qr-container">
-        <img src="/images/image-qr-code.png" alt="QR Code" />
+    <main>
+      <section class="card">
+        <div class="qr-container">
+          <img src="/images/image-qr-code.png" alt="QR Code" />
+        </div>
+        <header>
+          <h1>Improve your front-end skills by building projects</h1>
+        </header>
+        <p>
+          Scan the QR code to visit Frontend Mentor and take your coding skills to
+          the next level
+        </p>
+      </section>
+    </main>
+    <footer>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://pauldev-portfolio.vercel.app/">Paul Okwulu</a>.
       </div>
-      <h2>Improve your front-end skills by building projects</h2>
-      <p>
-        Scan the QR code to visit Frontend Mentor and take your coding skills to
-        the next level
-      </p>
-    </section>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Paul Okwulu</a>.
-    </div>
+    </footer>
   </body>
 </html>
